using dataTable to display defect density

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -7,6 +7,7 @@
         <link href="http://apps.qaci01.wic.west.com/static/common/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
         <link href="http://apps.qaci01.wic.west.com/static/common/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
         <link href="http://apps.qaci01.wic.west.com/static/quality/jqueryui/css/jquery-ui-1.9.2.custom.min.css" rel="stylesheet">
+        <link href="https://cdn.datatables.net/1.10.0/css/jquery.dataTables.css" rel="stylesheet">
         <!--[if lt IE 9]>
             <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.0/assets/js/html5shiv.js"></script>
             <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.0/assets/js/respond.min.js"></script>
@@ -193,6 +194,7 @@
         <script src="http://apps.qaci01.wic.west.com/static/common/placeholders/3.0.0/placeholders.min.js"></script>
         <script src="http://apps.qaci01.wic.west.com/static/common/highcharts/3.0.7/js/highcharts.js"></script>
         <script src="http://apps.qaci01.wic.west.com/static/common/highcharts/3.0.7/js/exporting.js"></script>
+        <script src="http://cdn.datatables.net/1.10.0/js/jquery.dataTables.js"></script>
 
         <script>
             $("#search-input").autocomplete({
