--- a/ceeq/apps/defects_density/templates/dd_list.html
+++ b/ceeq/apps/defects_density/templates/dd_list.html
@@ -1,7 +1,8 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container" id="dd_list">
+    <!--
         <div class="row">
             <h4>Project Defects Density</h4>
 
@@ -43,6 +44,7 @@
                 {% endfor %}
             </tbody>
         </table>
+    -->
 
     </div>
 {% endblock %}
