--- a/ceeq/apps/projects/templates/projects_start.html
+++ b/ceeq/apps/projects/templates/projects_start.html
@@ -38,6 +38,6 @@
 
 {% block footer %}
     <script>
-        {% include 'quality.js' %}
+        {% include 'project.js' %}
     </script>
 {% endblock %}
