--- a/ceeq/apps/projects/templates/score_overall.html
+++ b/ceeq/apps/projects/templates/score_overall.html
@@ -9,7 +9,7 @@
 
 {% block footer %}
     <script>
-        {% include 'quality.js' %}
+        {% include 'project.js' %}
 
     </script>
 {% endblock %}
