--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -7,6 +7,7 @@
             <br>
         </div>
 
+    <div class="container" id="dd_list_single"></div>
     <div class="container">
         <table class="table table-striped table-hover table-condensed table-bordered" style="">
             <thead>
