--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -7,47 +7,43 @@
             <br>
         </div>
 
-    <div class="container" id="dd_list_single"></div>
-    <div class="container">
-        <table class="table table-striped table-hover table-condensed table-bordered" style="">
-            <thead>
-                <tr>
-                    <td style="text-align: center"><strong>Version</strong></td>
-                    <td style="text-align: center"><strong>Date</strong></td>
-                    <td style="text-align: center"><strong>CXP</strong></td>
-                    <td style="text-align: center"><strong>Outbound</strong></td>
-                    <td style="text-align: center"><strong>Platform</strong></td>
-                    <td style="text-align: center"><strong>Reports</strong></td>
-                    <td style="text-align: center"><strong>Applications</strong></td>
-                    <td style="text-align: center"><strong>Voice Slots</strong></td>
-
-                    {% if superuser %}
-                        <td style="text-align: center"><strong>Del</strong></td>
-                    {% endif %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for dd in project_dds %}
+    {% if superuser %}
+        <div class="container">
+            <table class="table table-striped table-hover table-condensed table-bordered" style="">
+                <thead>
                     <tr>
-                        <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>
-                        <td class="col-sm-2" style="text-align: center">{{ dd.created }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ dd.cxp|floatformat:3 }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ dd.outbound|floatformat:3 }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ dd.reports|floatformat:3 }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ dd.applications|floatformat:3 }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ dd.voiceSlots|floatformat:3 }}</td>
-
-                        {% if superuser %}
-                        <td class="col-sm-1" style="text-align: center">
-                            <a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o fa-lg"></i></a> |
-                            <a href="{% url 'dd_detail' dd.id %}"><i class="fa fa-edit fa-lg"></i> </a>
-                        </td>
-                        {% endif %}
+                        <td style="text-align: center"><strong>Version</strong></td>
+                        <td style="text-align: center"><strong>Date</strong></td>
+                        <td style="text-align: center"><strong>CXP</strong></td>
+                        <td style="text-align: center"><strong>Outbound</strong></td>
+                        <td style="text-align: center"><strong>Platform</strong></td>
+                        <td style="text-align: center"><strong>Reports</strong></td>
+                        <td style="text-align: center"><strong>Applications</strong></td>
+                        <td style="text-align: center"><strong>Voice Slots</strong></td>
+                        <td style="text-align: center"><strong>Del</strong></td>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-    </div>
+                </thead>
+                <tbody>
+                    {% for dd in project_dds %}
+                        <tr>
+                            <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>
+                            <td class="col-sm-2" style="text-align: center">{{ dd.created }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.cxp|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.outbound|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.reports|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.applications|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">{{ dd.voiceSlots|floatformat:3 }}</td>
+                            <td class="col-sm-1" style="text-align: center">
+                                <a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o fa-lg"></i></a> |
+                                <a href="{% url 'dd_detail' dd.id %}"><i class="fa fa-edit fa-lg"></i> </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% else %}
+        <div class="container" id="dd_list_single"></div>
+    {% endif %}
 {% endblock %}
