Change component name "Applications" to "Application"

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -98,7 +98,7 @@
                         <p>During the procedure of IVR applications testing, the ration of following components
                         are considered as (2 : 1 : 3 : 3 : 8 : 3): (alphabet order)</p>
                         <ul>
-                            <li>Applications</li>
+                            <li>Application</li>
                                 <ul>
                                     <li>Design</li>
                                     <ul>
