Add Total number of jiras in pie chart table

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -299,7 +299,7 @@
 
                             renderer.text(
                                 item,
-                                cellLeft - cellPadding + colWidth,
+                                cellLeft - cellPadding + colWidth + 30,
                                 tableTop + rowHeight - cellPadding
                             )
                             .attr({
@@ -343,7 +343,7 @@
                             events: {
                                 load: Highcharts.drawTable
                             },
-                            borderWidth: 2
+                            borderWidth: 0
                         },
                         title: {
                             text: 'Components Impact CEEQ Score'
