--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -104,9 +104,8 @@
                     {% endif %}
                 </p>
             </div>
-            <div id="component_percentage_pie_chart" style="height: 500px;"></div>
+            <div id="component_percentage_pie_chart" ></div>
             {% if project.score > 0 %}
-                <br>
                 <div class="row">
                     <p style="text-align: center">
                         Export Pie Chart to:
@@ -268,8 +267,8 @@
 
                         // user options
                         var row_label = ['Blocker', 'Critical', 'Major', 'Minor', 'Trivial', 'Subtotal'];
-                        var tableTop = 310,
-                            colWidth = 80,
+                        var tableTop = 80,
+                            colWidth = 60,
                             tableLeft = 20,
                             rowHeight = 20,
                             cellPadding = 2.5,
@@ -299,7 +298,7 @@
 
                             renderer.text(
                                 item,
-                                cellLeft - cellPadding + colWidth + 30,
+                                cellLeft - cellPadding + colWidth + 25,
                                 tableTop + rowHeight - cellPadding
                             )
                             .attr({
@@ -358,7 +357,7 @@
                             pie: {
                                 allowPointSelect: true,
                                 cursor: 'pointer',
-                                center: ['50%', 100],
+                                center: ['80%', 100],
                                 dataLabels: {
                                     enabled: true,
                                     format: '<b>{point.name}</b>: {point.percentage:.2f}%',
@@ -401,6 +400,8 @@
                     var chart = $('#component_percentage_pie_chart').highcharts();
                     chart.exportChart({
                         type: 'image/png',
+                        sourceWidth: 1000,
+                        sourceHeight: 400,
                         filename: 'my-png'
                     });
                 });
