put CEEQ score on pie chart

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -347,7 +347,7 @@
                             borderWidth: 0
                         },
                         title: {
-                            text: 'Components Impact CEEQ Score'
+                            text: 'Components Impact CEEQ Score: ' + {{ project.score}} + ' / 10'
                         },
                         tooltip: {
                             //pointFormat: '{series.name}: <b>{point.percentage:.2f}%</b>'
