--- a/ceeq/apps/users/templates/home.html
+++ b/ceeq/apps/users/templates/home.html
@@ -6,17 +6,20 @@
 
         <div class="container" >
             <h1>Comprehensive End to End Quality</h1>
-            <li>To describe the measurement of IVR Applications</li>
-            <li>To evaluate the quality of solution</li>
+            <li>A new metric framework to describe the measurement of IVR Solutions</li>
+            <li>A new standard to evaluate the impact of solution defects on the overall quality of the IVR solutions</li>
+            <li>A brand new framework to target the components of IVR Solutions</li>
+            <li>CEEQ score ranges from 0 (product broken) to 10 (product with no known defects)</li>
+
+            <br>
+
+            <div id="home_score_container" style="width: 80%; height: 400px;" ></div>
+
         </div>
-
-        <div id="score_container" style="width: 80%; height: 400px;"></div>
-
-
 {% endblock %}
 
 {% block footer %}
     <script>
-        {% include 'project.js' %}
+        {% include 'home.js' %}
     </script>
 {% endblock %}
