--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -330,7 +330,77 @@
                                 }
                             });
 
+                            if (row == 0){
+                                Highcharts.tableLine( // top
+                                    renderer,
+                                    tableLeft,
+                                    tableTop + cellPadding,
+                                    cellLeft + colWidth,
+                                    tableTop + cellPadding
+                                );
+                                Highcharts.tableLine( // bottom
+                                    renderer,
+                                    tableLeft,
+                                    tableTop + (data[1].length + 1) * rowHeight + cellPadding,
+                                    cellLeft + colWidth,
+                                    tableTop + (data[1].length + 1) * rowHeight + cellPadding
+                                );
+                            }
+                            // horizontal line
+                            Highcharts.tableLine(
+                                renderer,
+                                tableLeft,
+                                tableTop + row * rowHeight + rowHeight + cellPadding,
+                                cellLeft + colWidth,
+                                tableTop + row * rowHeight + rowHeight + cellPadding
+                            );
                         });
+
+                        cellLeft = tableLeft + 25;
+                        $.each(row_label, function(i, item) {
+                            cellLeft += colWidth;
+                            // vertical lines
+                            if (i == 0) { // left table border
+                                Highcharts.tableLine(
+                                    renderer,
+                                    tableLeft,
+                                    tableTop + cellPadding,
+                                    tableLeft,
+                                    tableTop + (data[1].length + 1) * rowHeight + cellPadding
+                                );
+                            }
+
+                            Highcharts.tableLine(
+                                renderer,
+                                cellLeft,
+                                tableTop + cellPadding,
+                                cellLeft,
+                                tableTop + (data[1].length + 1) * rowHeight + cellPadding
+                            );
+
+                            if (i == row_label.length - 1) { // right table border
+
+                                Highcharts.tableLine(
+                                    renderer,
+                                    cellLeft + colWidth + 35,
+                                    tableTop + cellPadding,
+                                    cellLeft + colWidth + 35,
+                                    tableTop + (data[1].length + 1) * rowHeight + cellPadding
+                                );
+                            }
+                        })
+                    };
+
+                    /**
+                     * Draw a single line in the table
+                     */
+                    Highcharts.tableLine = function (renderer, x1, y1, x2, y2) {
+                        renderer.path(['M', x1, y1, 'L', x2, y2])
+                            .attr({
+                                'stroke': 'black',
+                                'stroke-width': 1
+                            })
+                            .add();
                     };
 
                     Highcharts.setOptions({
