--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -298,11 +298,11 @@
 
                             renderer.text(
                                 item,
-                                cellLeft - cellPadding + colWidth + 25,
+                                cellLeft - cellPadding + colWidth,
                                 tableTop + rowHeight - cellPadding
                             )
                             .attr({
-                                align: 'right'
+                                align: 'center'
                             })
                             .css({
                                 fontWeight: 'bold'
@@ -312,7 +312,6 @@
 
                         $.each(data[1], function(row, item){
                             cellLeft = tableLeft;
-                            //tableTop = tableTop
 
                             // apply number of jiras
                             $.each(item, function(i, priority){
@@ -324,7 +323,7 @@
                                         tableTop+ (row + 2) * rowHeight -cellPadding
                                     )
                                     .attr({
-                                        align: 'left'
+                                        align: 'center'
                                     })
                                     .add();
                                 }
@@ -356,6 +355,7 @@
                             );
                         });
 
+                        /*
                         cellLeft = tableLeft + 25;
                         $.each(row_label, function(i, item) {
                             cellLeft += colWidth;
@@ -389,11 +389,10 @@
                                 );
                             }
                         })
+                        */
                     };
 
-                    /**
-                     * Draw a single line in the table
-                     */
+                    //Draw a single line in the table
                     Highcharts.tableLine = function (renderer, x1, y1, x2, y2) {
                         renderer.path(['M', x1, y1, 'L', x2, y2])
                             .attr({
